feat(seo): add meta tags, social cards, and JSON-LD
Enhance the HTML head with comprehensive SEO optimization.
Includes primary meta tags, Open Graph and Twitter card
definitions for improved social sharing, and JSON-LD
structured data for better search engine indexing.
Also updates the page title and adds a canonical URL.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,66 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/Matrix-logo.svg.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Security Headers -->
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()" />
-    <title>Web Security Matrix - Professional Penetration Testing Framework</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Matrix Scanner - Web Security Assessment Platform | DNS, Port, WAF Detection</title>
+    <meta name="title" content="Matrix Scanner - Web Security Assessment Platform | DNS, Port, WAF Detection" />
+    <meta name="description" content="Matrix Scanner is a professional web security assessment platform with DNS reconnaissance, port scanning, WAF detection, technology fingerprinting, and subdomain discovery. For authorized security testing only." />
+    <meta name="keywords" content="web security scanner, penetration testing, DNS reconnaissance, port scanner, WAF detection, firewall detection, technology fingerprinting, subdomain discovery, vulnerability assessment, security audit, nmap, dnsrecon, wafw00f, security tools, ethical hacking" />
+    <meta name="author" content="Matrix Scanner" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#00ff41" />
+    <meta name="color-scheme" content="dark" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://matrix-scanner.app/" />
+    <meta property="og:title" content="Matrix Scanner - Web Security Assessment Platform" />
+    <meta property="og:description" content="Professional security scanning platform with DNS reconnaissance, port scanning, WAF detection, technology fingerprinting, and subdomain discovery. Matrix-themed UI for authorized penetration testing." />
+    <meta property="og:image" content="/Matrix-logo.svg.png" />
+    <meta property="og:site_name" content="Matrix Scanner" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://matrix-scanner.app/" />
+    <meta name="twitter:title" content="Matrix Scanner - Web Security Assessment Platform" />
+    <meta name="twitter:description" content="Professional security scanning platform with DNS reconnaissance, port scanning, WAF detection, technology fingerprinting, and subdomain discovery." />
+    <meta name="twitter:image" content="/Matrix-logo.svg.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://matrix-scanner.app/" />
+
+    <!-- Structured Data - JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Matrix Scanner",
+      "description": "A focused web security assessment platform with DNS reconnaissance, port scanning, WAF detection, technology fingerprinting, and subdomain discovery capabilities. For authorized security testing only.",
+      "url": "https://matrix-scanner.app/",
+      "applicationCategory": "SecurityApplication",
+      "operatingSystem": "Any",
+      "browserRequirements": "Requires JavaScript. Requires HTML5.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "featureList": [
+        "DNS Reconnaissance",
+        "Port Scanning",
+        "WAF/Firewall Detection",
+        "Technology Detection",
+        "Subdomain Discovery"
+      ],
+      "screenshot": "/Matrix-logo.svg.png",
+      "license": "https://opensource.org/licenses/MIT"
+    }
+    </script>
   </head>
   <body>
     <div id="app"></div>
